--- a/kotlinx-coroutines-core/build.gradle
+++ b/kotlinx-coroutines-core/build.gradle
@@ -1,4 +1,5 @@
 import org.jetbrains.kotlin.gradle.targets.js.nodejs.NodeJsRootPlugin
+import static KotlinVersion.isKotlinVersionAtLeast
 
 /*
  * Copyright 2016-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
@@ -18,7 +19,14 @@ if (rootProject.ext.native_targets_enabled) {
 }
 
 apply from: rootProject.file("gradle/compile-js-multiplatform.gradle")
-apply from: rootProject.file("gradle/compile-wasm-multiplatform.gradle")
+
+// TODO: Wasm target names have been changed since 1.9.20, remove this after migration to 1.9.20
+def isNewWasmTargetEnabled = isKotlinVersionAtLeast(ext.kotlin_version, 1, 9, 20)
+if (isNewWasmTargetEnabled) {
+    apply from: rootProject.file("gradle/compile-wasm-multiplatform.gradle")
+} else {
+    apply from: rootProject.file("gradle/compile-wasm-multiplatform19.gradle")
+}
 
 apply from: rootProject.file('gradle/dokka.gradle.kts')
 apply from: rootProject.file('gradle/publish.gradle')
@@ -268,12 +276,20 @@ jvmTest {
 // Setup manifest for kotlinx-coroutines-core-jvm.jar
 jvmJar { setupManifest(it) }
 
-wasmNodeTest {
-    filter.with {
-        excludeTest("ChannelsTest", "testIterableAsReceiveChannel")
-        excludeTest("ChannelsTest", "testEmptyList")
-        excludeTest("ChannelsTest", "testToList")
-        excludeTest("ChannelBuildersFlowTest", "testConsumeAsFlowProduceBuffered")
+void addIngoreTestsForWasm(org.gradle.api.tasks.testing.TestFilter filter) {
+    filter.excludeTest("ChannelsTest", "testIterableAsReceiveChannel")
+    filter.excludeTest("ChannelsTest", "testEmptyList")
+    filter.excludeTest("ChannelsTest", "testToList")
+    filter.excludeTest("ChannelBuildersFlowTest", "testConsumeAsFlowProduceBuffered")
+}
+
+if (isNewWasmTargetEnabled) {
+    wasmJsNodeTest {
+        addIngoreTestsForWasm(filter)
+    }
+} else {
+    wasmNodeTest {
+        addIngoreTestsForWasm(filter)
     }
 }
 
