--- a/kotlinx-coroutines-core/build.gradle
+++ b/kotlinx-coroutines-core/build.gradle
@@ -21,6 +21,7 @@ if (rootProject.ext.native_targets_enabled) {
 apply from: rootProject.file("gradle/compile-js-multiplatform.gradle")
 
 // TODO: Wasm target names have been changed since 1.9.20, remove this after migration to 1.9.20
+// https://github.com/Kotlin/kotlinx.coroutines/issues/3846
 def isNewWasmTargetEnabled = isKotlinVersionAtLeast(ext.kotlin_version, 1, 9, 20)
 if (isNewWasmTargetEnabled) {
     apply from: rootProject.file("gradle/compile-wasm-multiplatform.gradle")
@@ -35,7 +36,9 @@ apply from: rootProject.file('gradle/publish.gradle')
 
      TARGETS                            SOURCE SETS
      -------         ----------------------------------------------
-
+     wasmJs -------------------------------------------------+
+                                                             |
+                                                             |
      js -----------------------------------------------------+
                                                              |
                                                              V
@@ -275,23 +278,6 @@ jvmTest {
 
 // Setup manifest for kotlinx-coroutines-core-jvm.jar
 jvmJar { setupManifest(it) }
-
-void addIngoreTestsForWasm(org.gradle.api.tasks.testing.TestFilter filter) {
-    filter.excludeTest("ChannelsTest", "testIterableAsReceiveChannel")
-    filter.excludeTest("ChannelsTest", "testEmptyList")
-    filter.excludeTest("ChannelsTest", "testToList")
-    filter.excludeTest("ChannelBuildersFlowTest", "testConsumeAsFlowProduceBuffered")
-}
-
-if (isNewWasmTargetEnabled) {
-    wasmJsNodeTest {
-        addIngoreTestsForWasm(filter)
-    }
-} else {
-    wasmNodeTest {
-        addIngoreTestsForWasm(filter)
-    }
-}
 
 /*
  * Setup manifest for kotlinx-coroutines-core.jar
