--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
         CommunityProjectsBuild.addDevRepositoryIfEnabled(delegate, project)
         mavenLocal()
+        // This is bootstrap wasm repo, remove it as regular atomic-fu will be published
+        maven { url "https://maven.pkg.jetbrains.space/kotlin/p/wasm/experimental" }
     }
 
     dependencies {
@@ -140,6 +142,8 @@ allprojects {
         google()
         mavenCentral()
         CommunityProjectsBuild.addDevRepositoryIfEnabled(delegate, project)
+        // This is bootstrap wasm repo, remove it as regular atomic-fu will be published
+        maven { url "https://maven.pkg.jetbrains.space/kotlin/p/wasm/experimental" }
     }
 }
 
@@ -161,6 +165,7 @@ configure(subprojects.findAll { !sourceless.contains(it.name) && it.name != core
         apply from: rootProject.file("gradle/compile-js-multiplatform.gradle")
 
         // TODO: Wasm target names have been changed since 1.9.20, remove this after migration to 1.9.20
+        // https://github.com/Kotlin/kotlinx.coroutines/issues/3846
         def isNewWasmTargetEnabled = isKotlinVersionAtLeast(ext.kotlin_version, 1, 9, 20)
         if (isNewWasmTargetEnabled) {
             apply from: rootProject.file("gradle/compile-wasm-multiplatform.gradle")
