--- a/gradle/compile-wasm-multiplatform19.gradle
+++ b/gradle/compile-wasm-multiplatform19.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
+ * Copyright 2016-2023 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
 
 kotlin {
@@ -15,13 +15,13 @@ kotlin {
         wasmMain {
             kotlin {
                 srcDir 'jsWasm/src'
-                srcDir 'wasm/src'
+                srcDir 'wasmJs/src'
             }
         }
         wasmTest {
             kotlin {
                 srcDir 'jsWasm/test'
-                srcDir 'wasm/test'
+                srcDir 'wasmJs/test'
             }
         }
         wasmTest.dependencies {
