--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,9 @@ kotlin_version=1.9.0
 # Dependencies
 junit_version=4.12
 junit5_version=5.7.0
+atomicfu_version=0.22.0
 # This is bootstrap atomicFU version with wasm support, remove it as regular atomic-fu will be published
-atomicfu_version=0.21.0-wasm0
+atomicfu_wasm_version=0.21.0-wasm0
 knit_version=0.4.0
 html_version=0.7.2
 lincheck_version=2.18.1
