--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-        classpath "org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfu_version"
+        classpath "org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfu_wasm_version"
         classpath "org.jetbrains.kotlinx:kotlinx-knit:$knit_version"
         classpath "org.jetbrains.kotlinx:binary-compatibility-validator:$binary_compatibility_validator_version"
         classpath "ru.vyarus:gradle-animalsniffer-plugin:1.5.4" // Android API check
@@ -381,6 +381,17 @@ if (CacheRedirector.enabled) {
     def nodeJsExtension = rootProject.extensions.findByType(NodeJsRootExtension.class)
     if (nodeJsExtension != null) {
         nodeJsExtension.nodeDownloadBaseUrl = CacheRedirector.maybeRedirect(nodeJsExtension.nodeDownloadBaseUrl)
+    }
+}
+
+// This is bootstrap atomicFU version with wasm support, remove it as regular atomic-fu will be published
+allprojects {
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            if (details.requested.name == 'atomicfu-wasm') {
+                details.useVersion atomicfu_wasm_version
+            }
+        }
     }
 }
 
