--- a/integration-testing/smokeTest/build.gradle
+++ b/integration-testing/smokeTest/build.gradle
@@ -70,3 +70,8 @@ allprojects {
         }
     }
 }
+
+// Update node version to support latest wasm engine
+rootProject.extensions.findByType(org.jetbrains.kotlin.gradle.targets.js.nodejs.NodeJsRootExtension.class).with {
+    it.nodeVersion = "20.2.0"
+}
