--- a/build.gradle
+++ b/build.gradle
@@ -164,7 +164,7 @@ configure(subprojects.findAll { !sourceless.contains(it.name) && it.name != core
 
         apply from: rootProject.file("gradle/compile-js-multiplatform.gradle")
 
-        // TODO: Wasm target names have been changed since 1.9.20, remove this after migration to 1.9.20
+        // TODO: Wasm target names have been changed since 1.9.20, remove this after migration to 1.9.20 (issue 3846)
         // https://github.com/Kotlin/kotlinx.coroutines/issues/3846
         def isNewWasmTargetEnabled = isKotlinVersionAtLeast(ext.kotlin_version, 1, 9, 20)
         if (isNewWasmTargetEnabled) {
