Update kotlin version to 1.9.20-Beta

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,13 @@
 # Kotlin
 version=1.7.2-SNAPSHOT
 group=org.jetbrains.kotlinx
-kotlin_version=1.9.0
+kotlin_version=1.9.20-Beta
 
 # Dependencies
 junit_version=4.12
 junit5_version=5.7.0
-atomicfu_version=0.22.0
-# This is bootstrap atomicFU version with wasm support, remove it as regular atomic-fu will be published
-atomicfu_wasm_version=0.21.0-wasm0
+# TODO: Update version as regular atomic-fu will be published
+atomicfu_version=0.22.0-wasm1
 knit_version=0.4.0
 html_version=0.7.2
 lincheck_version=2.18.1
