--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ import org.jetbrains.kotlin.gradle.targets.js.yarn.YarnRootExtension
 import org.jetbrains.kotlin.konan.target.HostManager
 import org.jetbrains.dokka.gradle.DokkaTaskPartial
 
-import static KotlinVersion.isKotlinVersionAtLeast
 import static Projects.*
 
 apply plugin: 'jdk-convention'
@@ -62,7 +61,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-        classpath "org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfu_wasm_version"
+        classpath "org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfu_version"
         classpath "org.jetbrains.kotlinx:kotlinx-knit:$knit_version"
         classpath "org.jetbrains.kotlinx:binary-compatibility-validator:$binary_compatibility_validator_version"
         classpath "ru.vyarus:gradle-animalsniffer-plugin:1.5.4" // Android API check
@@ -164,14 +163,7 @@ configure(subprojects.findAll { !sourceless.contains(it.name) && it.name != core
 
         apply from: rootProject.file("gradle/compile-js-multiplatform.gradle")
 
-        // TODO: Wasm target names have been changed since 1.9.20, remove this after migration to 1.9.20 (issue 3846)
-        // https://github.com/Kotlin/kotlinx.coroutines/issues/3846
-        def isNewWasmTargetEnabled = isKotlinVersionAtLeast(ext.kotlin_version, 1, 9, 20)
-        if (isNewWasmTargetEnabled) {
-            apply from: rootProject.file("gradle/compile-wasm-multiplatform.gradle")
-        } else {
-            apply from: rootProject.file("gradle/compile-wasm-multiplatform19.gradle")
-        }
+        apply from: rootProject.file("gradle/compile-wasm-multiplatform.gradle")
 
         kotlin.sourceSets.commonMain.dependencies {
             api project(":$coreModule")
@@ -381,17 +373,6 @@ if (CacheRedirector.enabled) {
     def nodeJsExtension = rootProject.extensions.findByType(NodeJsRootExtension.class)
     if (nodeJsExtension != null) {
         nodeJsExtension.nodeDownloadBaseUrl = CacheRedirector.maybeRedirect(nodeJsExtension.nodeDownloadBaseUrl)
-    }
-}
-
-// This is bootstrap atomicFU version with wasm support, remove it as regular atomic-fu will be published
-allprojects {
-    configurations.all {
-        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-            if (details.requested.name == 'atomicfu-wasm') {
-                details.useVersion atomicfu_wasm_version
-            }
-        }
     }
 }
 
