--- a/integration-testing/smokeTest/build.gradle
+++ b/integration-testing/smokeTest/build.gradle
@@ -60,7 +60,9 @@ kotlin {
     }
 }
 
-// Update node version to support latest wasm engine
+// Drop this configuration when the Node.JS version in KGP is at least 20.2.0
+// check it here:
+// https://github.com/JetBrains/kotlin/blob/master/libraries/tools/kotlin-gradle-plugin/src/common/kotlin/org/jetbrains/kotlin/gradle/targets/js/nodejs/NodeJsRootExtension.kt
 rootProject.extensions.findByType(org.jetbrains.kotlin.gradle.targets.js.nodejs.NodeJsRootExtension.class).with {
     it.nodeVersion = "20.2.0"
 }
