--- a/integration-testing/smokeTest/build.gradle
+++ b/integration-testing/smokeTest/build.gradle
@@ -39,7 +39,7 @@ kotlin {
                 implementation kotlin('test-js')
             }
         }
-        wasmTest {
+        wasmJsTest {
             dependencies {
                 implementation kotlin('test-wasm-js')
             }
