--- a/kotlinx-coroutines-core/build.gradle
+++ b/kotlinx-coroutines-core/build.gradle
@@ -15,6 +15,8 @@ if (rootProject.ext.native_targets_enabled) {
     apply from: rootProject.file("gradle/compile-native-multiplatform.gradle")
 }
 
+apply from: rootProject.file("gradle/compile-jsAndWasmShared-multiplatform.gradle")
+
 apply from: rootProject.file("gradle/compile-js-multiplatform.gradle")
 
 apply from: rootProject.file("gradle/compile-wasm-multiplatform.gradle")
@@ -26,11 +28,8 @@ apply from: rootProject.file('gradle/publish.gradle')
 
      TARGETS                            SOURCE SETS
      -------         ----------------------------------------------
-     wasmJs -------------------------------------------------+
-                                                             |
-                                                             |
-     js -----------------------------------------------------+
-                                                             |
+     wasmJs \----------> jsAndWasmShared --------------------+
+     js     /                                                |
                                                              V
      jvmCore\ --------> jvm ---------> concurrent -------> common
      jdk8   /                           ^
@@ -237,7 +236,7 @@ kotlin.sourceSets {
 
 kotlin.sourceSets.configureEach {
     // Do not apply 'ExperimentalForeignApi' where we have allWarningsAsErrors set
-    if (it.name in ["jvmMain", "jvmCoreMain", "jsMain", "concurrentMain", "commonMain"]) return
+    if (it.name in ["jvmMain", "jvmCoreMain", "jsMain", 'wasmJsMain', 'jsAndWasmSharedMain', "concurrentMain", "commonMain"]) return
     languageSettings {
         optIn('kotlinx.cinterop.ExperimentalForeignApi')
         optIn('kotlin.experimental.ExperimentalNativeApi')
