Wasm WASI Target implementation

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,11 @@
 # Kotlin
 version=1.7.2-SNAPSHOT
 group=org.jetbrains.kotlinx
-kotlin_version=1.9.20-Beta
+#kotlin_version=1.9.20-Beta
+kotlin_version=1.9.255-SNAPSHOT
+build_snapshot_train=true
+kotlin_snapshot_version=1.9.255-SNAPSHOT
+skip_snapshot_checks=true
 
 # Dependencies
 junit_version=4.12
