--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ pluginManagement {
     }
 
     repositories {
+        mavenLocal()
         maven { url "https://maven.pkg.jetbrains.space/kotlin/p/dokka/dev/" }
         gradlePluginPortal()
     }
